--- a/Stonks/Gradient_Dissent.ipynb
+++ b/Stonks/Gradient_Dissent.ipynb
@@ -9,12 +9,12 @@
      "status": "ok",
      "timestamp": 1712078772765,
      "user": {
-      "displayName": "Raj Gupta ph22m006",
-      "userId": "08820052763223726008"
+      "displayName": "Ritviz",
+      "userId": "088"
      },
-     "user_tz": -330
+     "user_tz": -1
     },
-    "id": "DEvCsI150qpk"
+    "id": "deadmanrumbling"
    },
    "outputs": [],
    "source": [
